# squared

./: README.md  agent.py  pyproject.toml  squared.py
