[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "squared"
version = "0.0.1"
description = "Squared is an agent based package that has 1 feedback loop over top of itself"
readme = "README.md"
requires-python = ">=3.8"

dependencies = ["ollama"]

[tool.setuptools]
py-modules = ["squared", "agent"]

[project.scripts]
squared = "squared:main"
